unpackaged/main/default/objects/Case/fields/Baby_Insurance_ID__c.field-meta.xml
<CustomField>
    <fullName>Baby_Insurance_ID__c</fullName>
    <description>To inform an Eligibility/Intake Specialist of who the baby&#39;s insurance is and can take appropriate actions.</description>
    <inlineHelpText>To inform an Eligibility/Intake Specialist of who the baby&#39;s insurance is and can take appropriate actions.</inlineHelpText>
    <label>Baby Insurance ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>