unpackaged/main/default/objects/Case/fields/Baby_Insurance_Name__c.field-meta.xml
<CustomField>
    <fullName>Baby_Insurance_Name__c</fullName>
    <description>To inform an Eligibility/Intake Specialist of who the baby&#39;s insurance is and can take appropriate actions.</description>
    <inlineHelpText>To inform an Eligibility/Intake Specialist of who the baby&#39;s insurance is and can take appropriate actions.</inlineHelpText>
    <label>Baby Insurance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>