unpackaged/main/default/objects/Case/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TLN</fullName>
                <default>true</default>
                <label>TLN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>