unpackaged/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>What general category does your issue fall under?</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Hardware</fullName>
            </value>
            <value>
                <fullName>Microsoft Office</fullName>
            </value>
            <value>
                <fullName>myTLN portal</fullName>
            </value>
            <value>
                <fullName>Ring Central</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>TLN Website</fullName>
            </value>
            <value>
                <fullName>Waystar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>