unpackaged/main/default/objects/Case/fields/Display_Contact_Details_Section__c.field-meta.xml
<CustomField>
    <fullName>Display_Contact_Details_Section__c</fullName>
    <formula>OR(
    AND(
        NOT(ISBLANK(ContactId)),
        NOT(ISBLANK(AccountId))
    ),
    AND(
        OR(
            NOT(ISBLANK(ContactId)),
            NOT(ISBLANK(AccountId))
        ),
        Account.IsPersonAccount
    )
)</formula>
    <label>Display Contact Details Section</label>
    <type>Checkbox</type>
</CustomField>