unpackaged/main/default/objects/Case/fields/Encounter_Id__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Id__c</fullName>
    <description>Populated by the Charging Service Integration User</description>
    <label>Encounter Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>