unpackaged/main/default/objects/Case/fields/Initial_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Time__c</fullName>
    <inlineHelpText>How long it took our customer support team to respond to this customer/contractor message.</inlineHelpText>
    <label>Initial Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>