unpackaged/main/default/objects/Case/fields/Insurance_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Id__c</fullName>
    <label>Insurance Provider Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>