unpackaged/main/default/objects/Case/fields/Intake_Viewer_Link__c.field-meta.xml
<CustomField>
    <fullName>Intake_Viewer_Link__c</fullName>
    <formula>HYPERLINK($Setup.General_Settings__c.Intake_Viewer_Url__c + Submission_ID__c, &#39;Eligibility/Intake Viewer&#39;, &#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Viewer Link</label>
    <type>Text</type>
</CustomField>