unpackaged/main/default/objects/Case/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <description>28410 - to capture MRN # sent from Microservice to be used to link patients to cases in SF1 after being sent via the connection</description>
    <inlineHelpText>MRN number field is populated by Micro service and used to link patients in SF1 to cases that are sent via the SF2SF connector</inlineHelpText>
    <label>MRN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>