unpackaged/main/default/objects/Case/fields/Original_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Queue_Id__c</fullName>
    <description>Is used to remember original queue id to be able to re-assign when we get client reply.</description>
    <label>Original Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>