unpackaged/main/default/objects/Case/fields/Patient_Lead__c.field-meta.xml
<CustomField>
    <fullName>Patient_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Lead</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead.RecordTypeId</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Eligibility Cases</relationshipLabel>
    <relationshipName>Eligibility_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>