unpackaged/main/default/objects/Case/fields/Patient_Lead_Exists__c.field-meta.xml
<CustomField>
    <fullName>Patient_Lead_Exists__c</fullName>
    <formula>NOT(ISBLANK(Patient_Lead__c))</formula>
    <label>Patient Lead Exists</label>
    <type>Checkbox</type>
</CustomField>