unpackaged/main/default/objects/Case/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Technical field is used to map in SF2SF to be able to identify case type.</description>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>