unpackaged/main/default/objects/Case/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <inlineHelpText>How long it took to resolve this case, excluding time waiting to hear back from the customer/contractor.</inlineHelpText>
    <label>Resolution Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>