unpackaged/main/default/objects/Case/fields/Stopped_Since__c.field-meta.xml
<CustomField>
    <fullName>Stopped_Since__c</fullName>
    <description>Technical field, is used to capture the date from which we shall not count resolution time as case was in &#39;Waiting on External Response&#39; or &#39;Resolved&#39; state.</description>
    <label>Stopped Since</label>
    <type>DateTime</type>
</CustomField>