unpackaged/main/default/objects/Case/fields/Submission_ID__c.field-meta.xml
<CustomField>
    <fullName>Submission_ID__c</fullName>
    <label>Submission ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>