unpackaged/main/default/objects/Case/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake Viewer Issue</fullName>
            </value>
            <value>
                <fullName>Approved On Date Issue</fullName>
            </value>
            <value>
                <fullName>Addendum Question</fullName>
            </value>
            <value>
                <fullName>Chat Issue</fullName>
            </value>
            <value>
                <fullName>Care Plan Question</fullName>
            </value>
            <value>
                <fullName>Card Reader Issue</fullName>
            </value>
            <value>
                <fullName>Known Bug</fullName>
            </value>
            <value>
                <fullName>Chat Page Questions</fullName>
            </value>
            <value>
                <fullName>Chat Question</fullName>
            </value>
            <value>
                <fullName>Confirmation Email Issue</fullName>
            </value>
            <value>
                <fullName>Non-issue</fullName>
            </value>
            <value>
                <fullName>Eligibility Status Issue</fullName>
            </value>
            <value>
                <fullName>myTLN Chart Question</fullName>
            </value>
            <value>
                <fullName>Login Issue</fullName>
            </value>
            <value>
                <fullName>LC Contact Info Question</fullName>
            </value>
            <value>
                <fullName>Confirmation Screen Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Error Message</fullName>
            </value>
            <value>
                <fullName>Permissions Issue</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Form Loading Issue</fullName>
            </value>
            <value>
                <fullName>Portal error - Attempt of rematching/paring to not existed LC</fullName>
            </value>
            <value>
                <fullName>myTLN Chart Issue</fullName>
            </value>
            <value>
                <fullName>Patients Page Question</fullName>
            </value>
            <value>
                <fullName>Telehealth Issue</fullName>
            </value>
            <value>
                <fullName>Profile Question</fullName>
            </value>
            <value>
                <fullName>Portal error - LC Onboarding Details</fullName>
            </value>
            <value>
                <fullName>Resources Question</fullName>
            </value>
            <value>
                <fullName>Portal error - Missing Patient Visit Details</fullName>
            </value>
            <value>
                <fullName>Reports Page Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>