unpackaged/main/default/objects/Case/fields/Time_Spent_Waiting__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Waiting__c</fullName>
    <description>Technical field, is used to properly calculate resolution time for cases.</description>
    <label>Time Spent Waiting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>