unpackaged/main/default/objects/Case/recordTypes/Eligibility.recordType-meta.xml
<RecordType>
    <fullName>Eligibility</fullName>
    <active>true</active>
    <businessProcess>Eligibility</businessProcess>
    <label>Eligibility</label>
</RecordType>