unpackaged/main/default/objects/Case/recordTypes/Intake.recordType-meta.xml
<RecordType>
    <fullName>Intake</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>Intake</label>
</RecordType>