unpackaged/main/default/objects/Case/recordTypes/Submissions.recordType-meta.xml
<RecordType>
    <fullName>Submissions</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>Submissions</label>
</RecordType>