unpackaged/main/default/objects/Case/recordTypes/Support_Issue.recordType-meta.xml
<RecordType>
    <fullName>Support_Issue</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Support Issue</label>
</RecordType>