unpackaged/main/default/objects/Case/recordTypes/User_Support.recordType-meta.xml
<RecordType>
    <fullName>User_Support</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>User Support</label>
</RecordType>