unpackaged/main/default/objects/Case/listViews/All_Open_Eligibility_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Eligibility_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Eligibility</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Submission_Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </filters>
    <label>All Open Eligibility Cases</label>
    <sharedTo>
        <group>Submission_and_Eligibility_Viewers</group>
    </sharedTo>
</ListView>