unpackaged/main/default/objects/Case/listViews/Cases_From_SF1_Case.listView-meta.xml
<ListView>
    <fullName>Cases_From_SF1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cases From SF1</label>
    <queue>Cases_From_SF1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>