unpackaged/main/default/objects/Case/listViews/Eligibility_Case.listView-meta.xml
<ListView>
    <fullName>Eligibility_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Insurance_Provider_Name__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Eligibility</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Submission_Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </filters>
    <label>Eligibility</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>