unpackaged/main/default/objects/Case/listViews/Intake_Team_Case.listView-meta.xml
<ListView>
    <fullName>Intake_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Intake Team</label>
    <queue>Intake_Team</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>