unpackaged/main/default/objects/Case/listViews/Other_Eligibility_Cases.listView-meta.xml
<ListView>
    <fullName>Other_Eligibility_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Insurance_Provider_Name__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Eligibility</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Insurance_Provider_Name__c</field>
        <operation>notContain</operation>
        <value>Aetna,BCBS,Anthem,Blue cross blue shield,Veterans,VA,CCN,UHC,United Healthcare,UMR,All Savers,Golden,Shared Services,Harvard,Multiplan,PHCS,Sutter</value>
    </filters>
    <filters>
        <field>Submission_Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </filters>
    <label>Other Eligibility Cases</label>
    <sharedTo>
        <group>Submission_and_Eligibility_Viewers</group>
    </sharedTo>
</ListView>