unpackaged/main/default/objects/Case/listViews/sharing.listView-meta.xml
<ListView>
    <fullName>sharing</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Eligibility</value>
    </filters>
    <label>sharing</label>
    <sharedTo>
        <group>Intake_Team</group>
    </sharedTo>
</ListView>