unpackaged/main/default/objects/Case/listViews/Special_Accounts_Team_Case.listView-meta.xml
<ListView>
    <fullName>Special_Accounts_Team_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Intake</value>
    </filters>
    <label>Special Accounts Team Emails</label>
    <queue>Special_Accounts_Team</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>